[package]
name = "mock-dnp3-outstation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dnp3 = "1.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
