[package]
name = "mock-modbus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rodbus = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
