[package]
name = "mock-modbus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8"
rodbus = "1.4"
serde.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
