[package]
name = "mock-snmp-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rasn = "0.28"
rasn-snmp = "0.28"
rasn-smi = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
# USM crypto for v3 USM authPriv: HMAC-SHA-2 (RFC 7860) + AES-CFB (RFC 3826)
# + RFC 3414 §A.2 password-to-key derivation. Same primitive set the snmp2
# manager-side uses; the agent role just consumes them in reverse.
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
cfb-mode = "0.8"
rand = "0.9"
